--- a/xingyiwap/src/assets/css/pages/home.less
+++ b/xingyiwap/src/assets/css/pages/home.less
@@ -158,65 +158,54 @@
         }
         ul{
           .flexDisplayContent(flex, center, space-between, row);
-          flex-wrap: wrap;
           .setPaddingMargin(0, 0);
+          width: 100%;
+          height: 100%;
+          overflow-x: scroll;
           li{
+            .flexDisplayContent(@direction: column);
             text-align: center;
             font-family: PingFang SC;
-            &:nth-child(-n+6){
-              width: 16.5%;
-              margin-top: 7px;
-              color: #fff;
-              font-size: 20px;
-            }
-            &:nth-child(n+7){
-              .setWidthAndHeight(12%, 20px);
-              line-height: 20px;
-              margin: 0 2.3%;
+            margin-top: 5px;
+            width: auto;
+            height: 100%;
+            color: #fff;
+            font-size: 20px;
+            .factor{
               font-size: 12px;
               color: #fff;
-              each(@colorsLevels, {
-                &.@{key} {
-                  background: @value;
-                }
-              })
+              padding: 5px 10px;
+              white-space: nowrap;
             }
+            margin-left: 20px;
+            &:last-child{
+              padding-right: 20px;
+            }
+            each(@colorsLevels, {
+              .@{key} {
+                background: @value;
+              }
+            })
           }
           &.waterContent{
             li{
-              &:nth-child(-n+5){
-                width: 20%;
-                margin-top: 7px;
-                color: #fff;
-                font-size: 20px;
-              }
-              &:nth-child(n+6){
-                .setWidthAndHeight(15%, 20px);
-                line-height: 20px;
-                margin: 0 2.5%;
+              font-size: 20px;
+              each(@colorsLevels, {
+                .@{key} {
+                  background: @value;
+                }
+              })
+              .waterFactor{
                 font-size: 12px;
-                color: #fff;
-                each(@colorsLevels, {
-                  &.@{key} {
-                    background: @value;
-                  }
-                })
+                color: rgb(#fff, 0.8);
+                white-space: nowrap;
               }
-              &:nth-child(n+6):not(:nth-child(n+11)){
-                overflow: visible;
-                white-space:nowrap;
-              }
-              &:nth-child(n+11){
-                .setWidthAndHeight(15%, 20px);
-                line-height: 20px;
-                margin: 7px 2.5%;
-                font-size: 12px;
-                color: #fff;
-                each(@colorsWaterLevels, {
-                  &.@{key} {
-                    background: @value;
-                  }
-                })
+              .waterLevel{
+                padding: 2px 10px;
+                white-space: nowrap;
+                font-size: 13px;
+                margin-top: 5px;
+                width: 20px;
               }
             }
           }
