--- a/xingyiwap/src/assets/css/pages/common-style.less
+++ b/xingyiwap/src/assets/css/pages/common-style.less
@@ -44,6 +44,7 @@
 // 底部按钮下沉1像素
 .van-tabbar--fixed{
   bottom: -1px !important;
+  box-shadow: 0px 0px 5px rgba(200,200,200,.5);
 }
 .common-font-color-class {
   color: @font-dark-color;
