--- a/xingyiwap/src/assets/css/pages/home.less
+++ b/xingyiwap/src/assets/css/pages/home.less
@@ -60,11 +60,11 @@
         .positionDisplayContent(absolute, initial, initial, -10px, initial);
         .flexDisplayContent();
         width: 100%;
-        // color: #F5F5F5;
-        color: #1A1A1A;
+        color: #F5F5F5;
         font-size: 13px;
         text-align: center;
         span{
+          color: #1A1A1A;
           .setWidthAndHeight(20px, 20px);
           line-height: 20px;
           border-radius: 10px;
